Add more H264 profiles to VTVideoEncodeAccelerator

This CL adds MAIN and HIGH profile support.

Bug: 779246
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I5af448a35d2e8dfa97e0f30ea988f64ce74ad1ea
Reviewed-on: https://chromium-review.googlesource.com/743023
Reviewed-by: Magnus Jedvert <magjed@chromium.org>
Reviewed-by: Dan Sanders <sandersd@chromium.org>
Commit-Queue: Emircan Uysaler <emircan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512583}
Former-commit-id: 98a22d8fe63b2dfa16c37c955c357835280adcf5